Fix second level nav white background colour on IE

--- a/website/publicwhip.css
+++ b/website/publicwhip.css
@@ -399,7 +399,7 @@ IMG
 {
     BORDER-BOTTOM: #003300 1px solid
 }
-.secondheaders A.on {
+.secondheaders A:link.on, .secondheaders A:visited.on, .secondheaders A:active.on, .secondheaders A:hover.on {
     BACKGROUND-COLOR: #FFFFFF;
 }
 /* Inner HTML paragraph classes from the written answer XML files */
@@ -439,39 +439,6 @@ P.numindent
 P.letterfrom
 {
     FONT-STYLE: italic
-}
-TABLE.innerhtml
-{
-	empty-cells: show;
-	border-collapse: collapse;
-    border: thin solid #003300;
-}
-TABLE TH.innerhtml
-{
-	/* no top/bottom border as sometimes text is in two cells when should be in one */
-    border-left: thin solid #003300;
-    border-right: thin solid #003300;
-}
-TABLE TD.innerhtml
-{
-    border: thin solid #003300;
-}
-CAPTION.innerhtml
-{
-    FONT-WEIGHT: bold;
-}
-
-.minifeedback
-{
-    MARGIN-TOP: 0.5em;
-}
-.minifeedbackcell
-{
-    BACKGROUND-COLOR: #003300;
-    COLOR: #FFFFFF;
-    FLOAT: right;
-    TEXT-ALIGN: right;
-    VERTICAL-ALIGN: center;
 }
 INPUT
 {
@@ -520,7 +487,7 @@ BODY.patent H1
     .electionadvertright {text-align:right;}
     .electionadvertright a {color:37a44a;font-weight:bolder;background:transparent;text-decoration:none;font-size:14px;}
     .electionadvertright a:hover {background:transparent}
-/* For showing HTML source */
+/* For showing HTML source, such a Policy syndication box */
 PRE.htmlsource
 {
 	border: solid 1px #4d6c25;
